--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -831,7 +831,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{sup.index}{title}"
+tab_title_template "{title[title.rfind('/')+1:]}{sup.index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -854,7 +854,7 @@ tab_title_template "{sup.index}{title}"
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
-active_tab_foreground   #0FF
+active_tab_foreground   #FF00FF
 #active_tab_background   #000
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
@@ -864,7 +864,6 @@ inactive_tab_font_style normal
 #: Tab bar colors and styles
 
 # tab_bar_background #111
-
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
@@ -878,11 +877,9 @@ inactive_tab_font_style normal
 # foreground #dddddd
 background #111
 # 151e13
-
 #: The foreground and background colors
 
 background_opacity 0.95
-
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
 #: supported by the OS (for instance, when using a compositor under
