--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -10,6 +10,7 @@ setopt autocd # cd without typing cd
 autoload -Uz add-zsh-hook
 
 export HISTSIZE=100000 # bigger history
+export XDG_CONFIG_HOME=$HOME/.config
 
 # INCLUDES
 #
