--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -89,10 +89,10 @@ alias dw='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cac
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
 alias l="echo && exa --icons --group-directories-first && echo"
-alias lt="exa --tree --icons --level 2"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
 alias ll="echo && exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l --ignore-glob '.DS_Store' && echo"
+alias lll="exa --tree --icons --level 2"
 
 alias lln="exa --icons --all -l --sort=date"
 alias vi="nvim"
@@ -206,7 +206,7 @@ function cd_up() {
 # KEYBINDINGS
 #
 # bindkey '^b' fzm
-bindkey '^e' fzf_edit
+# bindkey '^e' fzf_edit
 bindkey '^o' fzf_cd
 bindkey '^k' quickls
 
@@ -226,7 +226,8 @@ function fzf_insert() {
 	print -z -- "$1 ${files[@]:q:q}"
 	zle
 }
-zle -N fzf_insert; bindkey '^y' fzf_insert
+zle -N fzf_insert;
+# bindkey '^y' fzf_insert
 
 # see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
 function fzf_jump_dir() {
