--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -173,7 +173,6 @@ quickls () {
 	zle && zle reset-prompt
 }; zle -N quickls;
 
-# bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 
 function jcd() {
@@ -196,8 +195,7 @@ function joshuto-cd() {
 	fi
 }; zle -N joshuto-cd;
 
-#bindkey '^ ' joshuto-cd; #register widget + key
-zle -N lfcd; bindkey '^ ' lfcd; #register widget + key
+zle -N lfcd;
 
 function cd_up() {
 	cd ..
@@ -227,13 +225,13 @@ function fzf_insert() {
 	zle
 }
 zle -N fzf_insert;
-# bindkey '^y' fzf_insert
 
 # see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
+			# --preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
 function fzf_jump_dir() {
-	files=($(exa --icons --only-dirs| \
+	files=($(fd --type=directory --hidden . | \
 		fzf --prompt ' ' --layout=reverse \
-		--preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
+		--preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(2)' \
 			--color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5 \
 			--height 50% \
 			--pointer=' ' \
@@ -247,7 +245,16 @@ function fzf_jump_dir() {
 	[[ -n "$file" ]] && cd "${file[@]}"
 	zle && zle reset-prompt
 }
-zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
+zle -N fzf_jump_dir;
+
+# KEYBINDINGS
+bindkey '^ ' lfcd; #register widget + key
+bindkey '^e' fzf_edit
+bindkey '^j' fzf_jump_dir
+bindkey '^k' quickls
+bindkey '^o' fzf_cd
+bindkey '^y' fzf_insert
+# bindkey '^b' fzm
 
 macchina
 
