--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -161,6 +161,7 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 gc () {
 	git add . &&
 	git commit -a -m "$@" &&
+	git pull
 	git push
 }
 alias gc-update="gc update:"
