--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -19,6 +19,7 @@ source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
+source ~/.zsh/prompt-middle.zsh
 source ~/.env
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
@@ -39,6 +40,8 @@ alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
+alias ga="git add . && git commit --amend"
+alias gca="ga"
 alias push="git push"
 alias pull="git pull"
 alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
@@ -255,6 +258,7 @@ bindkey '^j' fzf_jump_dir
 bindkey '^k' quickls
 bindkey '^o' fzf_cd
 bindkey '^y' fzf_insert
+bindkey "^M" magic-enter
 # bindkey '^b' fzm
 
 macchina
