--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -19,6 +19,7 @@ source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
+source ~/.zsh/prompt-middle.zsh
 source ~/.env
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
