--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -163,7 +163,7 @@ export PATH="$BUN_INSTALL/bin:$PATH"
 gc () {
 	git add . &&
 	git commit -a -m "$@" &&
-	git pull
+	git pull &&
 	git push
 }
 alias gc-update="gc update:"
