--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -39,7 +39,7 @@ font_family      Monaco Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16
+font_size 14
 
 #: Font size (in pts)
 
@@ -182,7 +182,7 @@ font_size 16
 
 #: Cursor customization
 
-# cursor #F0F
+cursor #F0F
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
@@ -218,7 +218,7 @@ cursor_shape block
 
 #: Defines the thickness of the underline cursor (in pts)
 
-cursor_blink_interval 1
+cursor_blink_interval 0.5
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -230,12 +230,8 @@ cursor_blink_interval 1
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
 
-#: }}}
-
-#: Scrollback \{{{
 
 # scrollback_lines 2000
-
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
 #: infinite scrollback. Note that using very large scrollback is not
@@ -288,10 +284,6 @@ cursor_blink_interval 1
 #: for high precision scrolling devices on platforms such as macOS and
 #: Wayland. Use negative numbers to change scroll direction.
 
-#: }}}
-
-#: Mouse \{{{
-
 mouse_hide_wait 2
 
 #: Hide mouse cursor after the specified number of seconds of the
@@ -301,8 +293,8 @@ mouse_hide_wait 2
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url_color #0087bd
-# url_style curly
+url_color #0066FF
+url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, single, double, curly
@@ -831,7 +823,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{title[title.rfind('/')+1:]}{sup.index}"
+tab_title_template "{title[title.rfind('/')+1:].lower()[:16]}{sup.index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
