--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -64,6 +64,7 @@ alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
 alias e-joshuto="cd ~/config/joshuto/ && edit joshuto.toml"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
+alias e-kitty="cd ~/config/kitty/ && edit kitty.conf"
 alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
 alias e-brewfile="edit ~/config/Brewfile"
 alias wiki="cd ~/wiki && edit index.md"
