--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -22,7 +22,7 @@ source ~/.zsh/fzf-browser.zsh
 source ~/.zsh/prompt-middle.zsh
 source ~/.env
 
-export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
+export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin/
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
 export FZF_DEFAULT_COMMAND="fd . --max-depth=3 |sk"
@@ -73,6 +73,8 @@ alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
 alias j=joshuto-cd
+alias yt="yt-dlp"
+alias ytff="yt-dlp --cookies-from-browser=firefox "
 
 alias loc=tokei
 
