--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -1,9 +1,3 @@
-# git clone https://github.com/tarjoilija/zgen.git "${HOME}/.zgen"
-# source "${HOME}/.zgen/zgen.zsh"
-# install fzf, then:
-# zgen load urbainvaes/fzf-marks
-# source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
-
 # note: touch ~/.hushlogin to remove login message
 
 setopt autocd # cd without typing cd
@@ -15,7 +9,8 @@ export XDG_CONFIG_HOME=$HOME/.config
 # INCLUDES
 #
 source ~/.zsh/fzf-marks.zsh
-source ~/.zsh/lf-jump.zsh
+source ~/.zsh/lf.zsh
+source ~/.zsh/openai.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
@@ -33,7 +28,7 @@ export HOMEBREW_NO_ENV_HINTS
 echo '\e[1 q'
 
 # ALIASES
-#
+#q
 alias xdg-open=open
 alias ~=grep
 alias q=exit
@@ -120,8 +115,7 @@ alias gen-yew-web3="cargo generate --git https://github.com/monomadic/yew-web3-t
 
 alias ls-colors='for x in {0..8}; do for i in {30..37}; do for a in {40..47}; do echo -ne "\e[$x;$i;$a""m\\\e[$x;$i;$a""m\e[0;37;40m "; done; echo; done; done; echo ""'
 
-alias f-all="fzf_cd"
-alias f-edit="fzf_edit"
+alias f-all="fzf-cd"
 
 alias v="viu --height 20"
 alias sixel="chafa --clear --format=symbol --center=on --scale=max "
@@ -203,66 +197,19 @@ function joshuto-cd() {
 	fi
 }; zle -N joshuto-cd;
 
-zle -N lfcd;
-
 function cd_up() {
 	cd ..
 }
 
 # KEYBINDINGS
 #
-# bindkey '^b' fzm
-# bindkey '^e' fzf_edit
-bindkey '^o' fzf_cd
-bindkey '^k' quickls
-
-function fzf_insert() {
-	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --strip-cwd-prefix --max-depth 1 --max-results 10000 | \
-		fzf --prompt 'insert > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-			--height 75% \
-			--header $'ctrl-e:edit, ctrl-o:open\n' \
-			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-			--bind 'ctrl-o:execute:open {1}' \
-		"$@"))
-	# [[ -n "$files" ]] && cd "${files[@]}"
-	# print $files
-	# zle && zle reset-prompt
-	#[ -n "$files" ] &&
-	print -z -- "$1 ${files[@]:q:q}"
-	zle
-}
-zle -N fzf_insert;
-
-# see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
-			# --preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(echo {}|cut -c2-)' \
-function fzf_jump_dir() {
-	files=($(fd --type=directory --hidden . | \
-		fzf --prompt ' ' --layout=reverse \
-		--preview 'exa --icons --group-directories-first --no-user --no-permissions --no-user --no-time -l --tree --level 2 $(2)' \
-			--color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5 \
-			--height 50% \
-			--pointer=' ' \
-			--info=hidden \
-			--bind 'ctrl-h:reload(exa --icons --only-dirs --all)' \
-			--bind 'tab:accept' \
-			--bind 'ctrl-j:jump-accept' \
-		"$@"))
-			# --bind 'tab:execute(cd "$(echo {}|cut -c3- > l.txt)")+reload(cd "$(echo {}|cut -c3- > l.txt)"&&exa --icons --only-dirs)+change-prompt({1})'
-		file=($(echo ${files[@]}|cut -c2-))
-	[[ -n "$file" ]] && cd "${file[@]}"
-	zle && zle reset-prompt
-}
-zle -N fzf_jump_dir;
-
-# KEYBINDINGS
 bindkey '^ ' lfcd; #register widget + key
-bindkey '^e' fzf_edit
-bindkey '^j' fzf_jump_dir
+bindkey '^j' fzf-cd
 bindkey '^k' quickls
-bindkey '^o' fzf_cd
-bindkey '^y' fzf_insert
-bindkey "^M" magic-enter
+bindkey '^m' magic-enter
+bindkey '^o' fzf-marks
+bindkey '^y' fzf-insert
+# bindkey '^e' fzf_edit
 # bindkey '^b' fzm
 
 macchina
