Add mas, rga, and aicommits to Brewfile and update cask "session".

--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -54,7 +54,7 @@ alias ci="cargo install --path ."
 alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && e ~/wiki/index.md +"lua GoRoot()"'
-alias e=nvim -c "lua GoRoot()"
+alias e='nvim -c "lua GoRoot()"'
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
