--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -15,6 +15,7 @@ source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
 source ~/.zsh/prompt-middle.zsh
+source ~/.zsh/imagemagick.zsh
 source ~/.env
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin/
