--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -18,7 +18,7 @@ source ~/.zsh/prompt-middle.zsh
 source ~/.zsh/imagemagick.zsh
 source ~/.env
 
-export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin/
+export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
 export FZF_DEFAULT_COMMAND="fd . --max-depth=3 |sk"
