Update image conversion scripts and aliases

--- a/skhd/skhd.conf
+++ b/skhd/skhd.conf
@@ -4,6 +4,9 @@ rcmd - return : /Applications/kitty.app/Contents/MacOS/kitty --single-instance -
 #cmd - return : /Applications/Alacritty.app/Contents/MacOS/alacritty
 #cmd - shift - return : /Applications/Kitty.app/Contents/MacOS/kitty
 
+# fullscreen
+cmd - return : window -f
+
 # focus window
 # alt - h : chunkc tiling::window --focus west
 # alt - j : chunkc tiling::window --focus south
