--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -13,6 +13,9 @@ map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
 
+# focus kitty
+map option+space focus_toggle
+
 # clear screen
 # map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
@@ -22,9 +25,9 @@ map cmd+[ previous_window
 
 #font_family      Iosevka
 font_family      Monaco Nerd Font Mono
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -1209,7 +1212,7 @@ macos_titlebar_color background
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt no
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -1224,7 +1227,7 @@ macos_titlebar_color background
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
