--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -293,23 +293,12 @@ mouse_hide_wait 2
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
+# url style (on mouseover)
 url_color #0066FF
 url_style curly
-
-#: The color and style for highlighting URLs on mouse-over. url_style
-#: can be one of: none, single, double, curly
-
-# open_url_with default
-
-#: The program with which to open URLs that are clicked on. The
-#: special value default means to use the operating system's default
-#: URL handler.
-
-# url_prefixes http https file ftp gemini irc gopher mailto news git
-
-#: The set of URL prefixes to look for when detecting a URL under the
-#: mouse cursor.
-
+open_url_with default
+url_prefixes http https file ftp gemini irc gopher mailto news git
+# detect urls under mouse
 detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
@@ -662,7 +651,7 @@ window_margin_width 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0 26 26 26
+window_padding_width 26 26 26 26
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -823,7 +812,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{title[title.rfind('/')+1:].lower()[:16]}{sup.index}"
+tab_title_template "{title[title.rfind('/')+1:].lower()[:10]}{sup.index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
