--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -8,6 +8,7 @@ export XDG_CONFIG_HOME=$HOME/.config
 
 # INCLUDES
 #
+source ~/.zsh/fzf.zsh
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf.zsh
 source ~/.zsh/openai.zsh
