--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,7 @@
 # KITTY
 
+# KEYBINDINGS
+#
 # switch tabs
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
@@ -12,92 +14,29 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
-
+#
 # focus kitty
 map option+space focus_toggle
-
+#
 # clear screen
 # map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
-#: kitty has very powerful font management. You can configure
-#: individual font faces and even specify special fonts for particular
-#: characters.
-
-#font_family      Iosevka
+# FONTS
+# run: `kitty list-fonts`
+#
 font_family      Monaco Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-
-#: You can specify different fonts for the bold/italic/bold-italic
-#: variants. To get a full list of supported fonts use the `kitty
-#: list-fonts` command. By default they are derived automatically, by
-#: the OSes font system. When bold_font or bold_italic_font is set to
-#: auto on macOS, the priority of bold fonts is semi-bold, bold,
-#: heavy. Setting them manually is useful for font families that have
-#: many weight variants like Book, Medium, Thick, etc. For example::
-
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
-
+#
 font_size 14
-
-#: Font size (in pts)
-
 # force_ltr no
-
-#: kitty does not support BIDI (bidirectional text), however, for RTL
-#: scripts, words are automatically displayed in RTL. That is to say,
-#: in an RTL script, the words "HELLO WORLD" display in kitty as
-#: "WORLD HELLO", and if you try to select a substring of an RTL-
-#: shaped string, you will get the character that would be there had
-#: the the string been LTR. For example, assuming the Hebrew word
-#: ירושלים, selecting the character that on the screen appears to be ם
-#: actually writes into the selection buffer the character י.  kitty's
-#: default behavior is useful in conjunction with a filter to reverse
-#: the word order, however, if you wish to manipulate RTL glyphs, it
-#: can be very challenging to work with, so this option is provided to
-#: turn it off. Furthermore, this option can be used with the command
-#: line program GNU FriBidi
-#: <https://github.com/fribidi/fribidi#executable> to get BIDI
-#: support, because it will force kitty to always treat the text as
-#: LTR, which FriBidi expects for terminals.
-
-# adjust_line_height  0
+# adjust_line_height  0 # use pixels or %, can be negative
 # adjust_column_width 0
-
-#: Change the size of each character cell kitty renders. You can use
-#: either numbers, which are interpreted as pixels or percentages
-#: (number followed by %), which are interpreted as percentages of the
-#: unmodified values. You can use negative pixels or percentages less
-#: than 100% to reduce sizes (but this might cause rendering
-#: artifacts).
-
 # adjust_baseline 0
 
-#: Adjust the vertical alignment of text (the height in the cell at
-#: which text is positioned). You can use either numbers, which are
-#: interpreted as pixels or a percentages (number followed by %),
-#: which are interpreted as the percentage of the line height. A
-#: positive value moves the baseline up, and a negative value moves
-#: them down. The underline and strikethrough positions are adjusted
-#: accordingly.
-
-# symbol_map
-
-#: E.g. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
-
-#: Map the specified unicode codepoints to a particular font. Useful
-#: if you need special rendering for some symbols, such as for
-#: Powerline. Avoids the need for patched fonts. Each unicode code
-#: point is specified in the form U+<code point in hexadecimal>. You
-#: can specify multiple code points, separated by commas and ranges
-#: separated by hyphens. symbol_map itself can be specified multiple
-#: times. Syntax is::
-
-#:     symbol_map codepoints Font Family Name
+# map specific characters
+# symbol_map #: eg. symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 # disable_ligatures never
 
