--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -8,7 +8,7 @@ export XDG_CONFIG_HOME=$HOME/.config
 
 # INCLUDES
 #
-source ~/.zsh/fzf.zsh
+source ~/.zsh/sk.zsh
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf.zsh
 source ~/.zsh/openai.zsh
@@ -17,12 +17,14 @@ source ~/.zsh/fzf-custom.zsh
 source ~/.zsh/fzf-browser.zsh
 source ~/.zsh/prompt-middle.zsh
 source ~/.zsh/imagemagick.zsh
+source ~/.zsh/exa.zsh
 source ~/.env
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
-export FZF_DEFAULT_COMMAND="fd . --max-depth=3 |sk"
+export SKIM_DEFAULT_OPTIONS=$FZF_DEFAULT_OPTS
+export SKIM_DEFAULT_COMMAND="fd . --max-depth=3"
 
 export HOMEBREW_NO_ENV_HINTS
 
