--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -72,7 +72,7 @@ alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
-alias j=joshuto-cd
+alias j=joshuto
 alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
 
@@ -186,21 +186,21 @@ function jcd() {
 	joshuto
 }; zle -N jcd;
 
-function joshuto-cd() {
-	local tmp="$(mktemp)";
-	joshuto --file-chooser --output-file "$tmp";
-	if [ -f "$tmp" ]; then
-			dir="$(cat "$tmp")"
-			rm -f "$tmp"
-			if [ -d "$dir" ]; then
-					if [ "$dir" != "$(pwd)" ]; then
-							cd "$dir"
-							# clear
-							zle && zle reset-prompt
-					fi
-			fi
-	fi
-}; zle -N joshuto-cd;
+# function joshuto-cd() {
+# 	local tmp="$(mktemp)";
+# 	joshuto --file-chooser --output-file "$tmp";
+# 	if [ -f "$tmp" ]; then
+# 			dir="$(cat "$tmp")"
+# 			rm -f "$tmp"
+# 			if [ -d "$dir" ]; then
+# 					if [ "$dir" != "$(pwd)" ]; then
+# 							cd "$dir"
+# 							# clear
+# 							zle && zle reset-prompt
+# 					fi
+# 			fi
+# 	fi
+# }; zle -N joshuto-cd;
 
 function cd_up() {
 	cd ..
