--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -76,6 +76,8 @@ alias j=joshuto
 alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
 
+alias cp-pwd="echo $PWD|pbcopy" # mac only
+
 alias loc=tokei
 
 alias p8="ping 8.8.8.8"
