--- a/helix/config.toml
+++ b/helix/config.toml
@@ -14,6 +14,7 @@ C-s = [":write"]
 esc = ["collapse_selection", "keep_primary_selection"]
 D = ["insert_mode", "kill_to_line_end", "normal_mode"]
 H = ["goto_line_start"]
+0 = ["goto_line_start"]
 L = ["goto_line_end"]
 V = ["goto_line_start", "select_mode", "goto_line_end"]
 "{" = ["goto_prev_paragraph"]
