--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -64,6 +64,7 @@ alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
 alias e-joshuto="cd ~/config/joshuto/ && edit joshuto.toml"
+alias kitty-joshuto="kitty --override background=#000 --working-directory=$HOME/workspaces --single-instance joshuto"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias e-kitty="cd ~/config/kitty/ && edit kitty.conf"
 alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
