--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,8 @@
 # KITTY
 
+#
 # KEYBINDINGS
 #
-# switch tabs
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
@@ -14,9 +14,12 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
+map cmd+n new_os_window_with_cmd
+
+#
 #
 # focus kitty
-map option+space focus_toggle
+# map ctrl+space focus_toggle
 #
 # clear screen
 # map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
@@ -1476,8 +1479,6 @@ macos_show_window_title_in none
 #: New OS window
 
 # map kitty_mod+n new_os_window
-# map cmd+n       new_os_window
-
 #::  Works like new_window above, except that it opens a top level OS
 #::  kitty window. In particular you can use new_os_window_with_cwd to
 #::  open a window with the current working directory.
@@ -1495,13 +1496,8 @@ macos_show_window_title_in none
 
 # map kitty_mod+[ previous_window
 
-#: Move window forward
-
-# map kitty_mod+f move_window_forward
-
-#: Move window backward
-
-# map kitty_mod+b move_window_backward
+# map cmd+] move_window_forward
+# map cmd+[ move_window_backward
 
 #: Move window to top
 
@@ -1589,7 +1585,7 @@ macos_show_window_title_in none
 
 map shift+cmd+t new_tab
 map cmd+t new_tab
-map ctrl+t new_tab
+# map ctrl+t new_tab
 
 #: Close tab
 
@@ -1602,7 +1598,8 @@ map ctrl+t new_tab
 
 #: Move tab forward
 
-# map kitty_mod+. move_tab_forward
+map cmd+] move_tab_forward
+map cmd+[ move_tab_backward
 
 #: Move tab backward
 
