--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -220,8 +220,8 @@ bindkey '^y' fzf-insert
 # bindkey '^e' fzf_edit
 # bindkey '^b' fzm
 
-macchina
-
 export WASMTIME_HOME="$HOME/.wasmtime"
+
+hello
 
 export PATH="$WASMTIME_HOME/bin:$PATH"
