Add new Python script for downloading files and split image function

--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -137,6 +137,9 @@ alias src="cd ~/src && l"
 
 alias youtube-dl-audio="youtube-dl --extract-audio --audio-format mp3 "
 
+# macos
+alias battery='pmset -g batt'
+
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
 export TERM="xterm-256color"
