--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -76,6 +76,8 @@ alias e-fzf="fzf_edit"
 alias j=joshuto
 alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
+alias htop="btm" # I always forget which monitor I have installed
+alias bottom="btm"
 
 alias cp-pwd="echo $PWD|pbcopy" # mac only
 
