--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1143,7 +1143,7 @@ color10 #9ec400
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -1164,7 +1164,7 @@ macos_quit_when_last_window_closed yes
 #: default, kitty will stay running, even with no open windows, as is
 #: the expected behavior on macOS.
 
-# macos_window_resizable yes
+macos_window_resizable yes
 
 #: Disable this if you want kitty top-level (OS) windows to not be
 #: resizable on macOS. Changing this setting by reloading the config
