--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -1,3 +1,4 @@
+# zle && zle reset-prompt
 # note: touch ~/.hushlogin to remove login message
 
 setopt autocd # cd without typing cd
@@ -89,6 +90,10 @@ alias pg="ping google.com"
 alias t="fzf_create_template"
 alias new="fzf_create_template"
 alias template="fzf_create_template"
+
+alias trash-view="rip --seance"
+alias trash-undo="rip --unbury "
+
 
 alias suckit-sub="suckit -v -j 1 --delay 1 --include-visit '${1}(.*)$' --include-download '${1}(.*)$' ${1}"
 
@@ -190,9 +195,9 @@ quickls () {
 
 # -s translate input string to output
 
-function jcd() {
+function joshuto-cd() {
 	joshuto
-}; zle -N jcd;
+}; zle -N joshuto-cd;
 
 # function joshuto-cd() {
 # 	local tmp="$(mktemp)";
@@ -210,9 +215,10 @@ function jcd() {
 # 	fi
 # }; zle -N joshuto-cd;
 
-function cd_up() {
+function cd-up() {
 	cd ..
-}
+	zle && zle reset-prompt
+}; zle -N cd-up;
 
 # KEYBINDINGS
 #
@@ -222,6 +228,8 @@ bindkey '^k' quickls
 bindkey '^m' magic-enter
 bindkey '^o' fzf-marks
 bindkey '^y' fzf-insert
+bindkey '^[u' cd-up
+bindkey '^[j' joshuto-cd;
 # bindkey '^e' fzf_edit
 # bindkey '^b' fzm
 
