--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -32,6 +32,16 @@ export HOMEBREW_NO_ENV_HINTS
 # block cursor (5=bar)
 echo '\e[1 q'
 
+# COMPLETIONS
+#
+autoload -Uz compinit; compinit
+# 1password
+eval "$(op completion zsh)"
+compdef _op op
+# dotter
+# eval "$(dotter gen-completions --shell zsh)"
+# compdef _dotter dotter
+
 # ALIASES
 #q
 alias xdg-open=open
@@ -172,9 +182,9 @@ export PATH="$PATH:/Users/nom/.foundry/bin"
 # export LS_COLORS="$(vivid generate molokai)"
 
 # bun
-export BUN_INSTALL="/Users/nom/.bun"
-export PATH="$BUN_INSTALL/bin:$PATH"
-[ -s "/Users/nom/.bun/_bun" ] && source "/Users/nom/.bun/_bun"
+# export BUN_INSTALL="/Users/nom/.bun"
+# export PATH="$BUN_INSTALL/bin:$PATH"
+# [ -s "/Users/nom/.bun/_bun" ] && source "/Users/nom/.bun/_bun"
 
 # microcommit
 gc () {
