--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -92,6 +92,11 @@ alias bottom="btm"
 
 alias cp-pwd="echo $PWD|pbcopy" # mac only
 
+alias up="cd .."
+alias gh="cd ~"
+alias gr="cd /"
+alias zsh-reload="source ~/.zshrc"
+
 alias loc=tokei
 
 alias p8="ping 8.8.8.8"
