--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1890,8 +1890,12 @@ map  shift+enter     send_text normal,application \x1b[13;2u
 map  ctrl+tab        send_text normal,application \x1b[9;5u
 map  ctrl+shift+tab  send_text normal,application \x1b[9;6u
 #
-# cmd+s to ctrl+s
+# use showkey on linux, or Show Key on mac to work out codes, under "key code" (unicode hex)
+#
+# cmd+s -> ctrl+s
 map cmd+s send_text all \x13
+# cmd+o -> alt+o
+map cmd+o send_text all \xf8
 map cmd+backspace send_text all \x15
 
 include themes/1984-dark
