--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1105,7 +1105,7 @@ color10 #9ec400
 #: ``disabled`` to turn off shell integration, completely. See
 #: https://sw.kovidgoyal.net/kitty/shell-integration/ for details.
 
-# term xterm-kitty
+term xterm-kitty
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
