--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -165,7 +165,7 @@ alias battery='pmset -g batt'
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
-export TERM="xterm-256color"
+#export TERM="xterm-256color"
 export HOSTNAME=`hostname`
 
 # COMPLETIONS
