--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,8 +16,9 @@ map cmd+] next_window
 map cmd+[ previous_window
 map cmd+n new_os_window_with_cmd
 
-#
-#
+map cmd+shift+t launch --cwd=current
+map cmd+shift+g show_last_command_output
+
 # focus kitty
 # map ctrl+space focus_toggle
 #
@@ -757,7 +758,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{title[title.rfind('/')+1:].lower()[:10]}{sup.index}"
+tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -781,7 +782,7 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:10]}{sup.index}"
 #: tab_title_template.
 
 active_tab_foreground   #FF00FF
-#active_tab_background   #000
+active_tab_background   #000
 active_tab_font_style   bold
 inactive_tab_foreground #AAA
 #inactive_tab_background #111
@@ -871,7 +872,7 @@ background_opacity 0.95
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-#: The color table \{{{
+#: The color table
 
 #: The 256 terminal colors. There are 8 basic colors, each color has a
 #: dull and bright version, for the first 16 colors. You can set the
@@ -936,11 +937,7 @@ color10 #9ec400
 
 #: Color for marks of type 3 (violet)
 
-#: }}}
-
-#: }}}
-
-#: Advanced \{\\{\{
+#: Advanced
 
 # shell .
 
@@ -1090,15 +1087,13 @@ color10 #9ec400
 #: permission.
 
 # allow_hyperlinks yes
-
 #: Process hyperlink (OSC 8) escape sequences. If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
 #: links, that you can click by with the mouse or the hints kitten
 #: </kittens/hints>. The special value of ``ask`` means that kitty
 #: will ask before opening the link when clicked.
 
-# shell_integration enabled
-
+shell_integration enabled
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
 #: previous command in a pager, etc. on supported shells.  Set to
@@ -1118,9 +1113,7 @@ term xterm-kitty
 #: work. Changing this option by reloading the config will only affect
 #: newly created windows.
 
-#: }}}
-
-#: OS specific tweaks \{{{
+#: OS specific tweaks
 
 # wayland_titlebar_color system
 
@@ -1153,8 +1146,7 @@ macos_option_as_alt yes
 #: right or both Option keys as Alt, instead. Changing this setting by
 #: reloading the config is not supported.
 
-# macos_hide_from_tasks no
-
+# macos_hide_from_tasks yes
 #: Hide the kitty window from running tasks (⌘+Tab) on macOS. Changing
 #: this setting by reloading the config is not supported.
 
