--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -124,8 +124,9 @@ cmd open ${{
         text/*) nvim $fx;;
         video/*) mpv --no-native-fs --msg-level=all=no $fx;;
         image/*) echo && iv $fx && echo ;;
+				application/epub+zip) epy $fx;;
         # image/*) echo && fbi $fx && echo ;;
-        *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
+        # *) for f in $fx; do setsid $OPENER $f > /dev/null 2> /dev/null & done;;
     esac
 }}
 
