--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -12,6 +12,7 @@ export XDG_CONFIG_HOME=$HOME/.config
 source ~/.zsh/sk.zsh
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf.zsh
+source ~/.zsh/joshuto.zsh
 source ~/.zsh/openai.zsh
 source ~/.zsh/fzf-templates.zsh
 source ~/.zsh/fzf-custom.zsh
@@ -21,7 +22,7 @@ source ~/.zsh/imagemagick.zsh
 source ~/.zsh/exa.zsh
 source ~/.env
 
-export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin
+export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin:$HOME/workspaces/python-projects.workspace
 
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
 export SKIM_DEFAULT_OPTIONS=$FZF_DEFAULT_OPTS
@@ -81,7 +82,7 @@ alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias e-kitty="cd ~/config/kitty/ && edit kitty.conf"
 alias e-snippets="cd ~/config/neovim/snippets/ && edit . +'Telescope find_files'"
 alias e-brewfile="edit ~/config/Brewfile"
-alias wiki="cd ~/wiki && edit index.md"
+alias wiki="cd ~/wiki && e index.md"
 alias e-wiki=wiki
 alias w=wiki
 alias e-fzf="fzf_edit"
@@ -110,6 +111,7 @@ alias template="fzf_create_template"
 alias trash-view="rip --seance"
 alias trash-undo="rip --unbury "
 
+alias pandoc-yfm="pandoc "{$1}" -s -f epub -t markdown-markdown_in_html_blocks --extract-media=./ -o book.md --standalone"
 
 alias suckit-sub="suckit -v -j 1 --delay 1 --include-visit '${1}(.*)$' --include-download '${1}(.*)$' ${1}"
 
@@ -211,26 +213,6 @@ quickls () {
 
 # -s translate input string to output
 
-function joshuto-cd() {
-	joshuto
-}; zle -N joshuto-cd;
-
-# function joshuto-cd() {
-# 	local tmp="$(mktemp)";
-# 	joshuto --file-chooser --output-file "$tmp";
-# 	if [ -f "$tmp" ]; then
-# 			dir="$(cat "$tmp")"
-# 			rm -f "$tmp"
-# 			if [ -d "$dir" ]; then
-# 					if [ "$dir" != "$(pwd)" ]; then
-# 							cd "$dir"
-# 							# clear
-# 							zle && zle reset-prompt
-# 					fi
-# 			fi
-# 	fi
-# }; zle -N joshuto-cd;
-
 function cd-up() {
 	cd ..
 	zle && zle reset-prompt
@@ -238,14 +220,14 @@ function cd-up() {
 
 # KEYBINDINGS
 #
-bindkey '^ ' lfcd; #register widget + key
-bindkey '^j' fzf-cd
-bindkey '^k' quickls
+#bindkey '^l' lfcd; #register widget + key
+bindkey '^ ' joshuto-wrapper;
+bindkey '^f' fzf-cd
+#bindkey '^k' quickls
 bindkey '^m' magic-enter
 bindkey '^o' fzf-marks
 bindkey '^y' fzf-insert
 bindkey '^[u' cd-up
-bindkey '^[j' joshuto-cd;
 # bindkey '^e' fzf_edit
 # bindkey '^b' fzm
 
