--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -1,6 +1,10 @@
 # zle && zle reset-prompt
 # note: touch ~/.hushlogin to remove login message
 
+export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin:$HOME/workspaces/python-projects.workspace
+
+hello
+
 setopt autocd # cd without typing cd
 autoload -Uz add-zsh-hook
 
@@ -22,8 +26,6 @@ source ~/.zsh/imagemagick.zsh
 source ~/.zsh/exa.zsh
 source ~/.env
 
-export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin:$HOME/workspaces/python-projects.workspace
-
 export FZF_DEFAULT_OPTS="--layout=reverse --inline-info --color=bg+:-1,fg:4,info:15,fg+:5,header:7,hl:5,hl+:5"
 export SKIM_DEFAULT_OPTIONS=$FZF_DEFAULT_OPTS
 export SKIM_DEFAULT_COMMAND="fd . --max-depth=3"
@@ -31,7 +33,7 @@ export SKIM_DEFAULT_COMMAND="fd . --max-depth=3"
 export HOMEBREW_NO_ENV_HINTS
 
 # block cursor (5=bar)
-echo '\e[1 q'
+# echo '\e[1 q'
 
 # COMPLETIONS
 #
@@ -118,7 +120,7 @@ alias suckit-sub="suckit -v -j 1 --delay 1 --include-visit '${1}(.*)$' --include
 alias vim=nvim
 alias vi=nvim
 
-alias dd='WD=${PWD} && cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml deploy --global-config global.toml --local-config local.toml && cd $WD'
+alias dd='WD=${PWD} && cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml deploy --global-config global.toml --local-config local.toml && cd $WD && clear && zsh-reload'
 alias dw='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml watch --global-config global.toml --local-config local.toml'
 
 alias p="ping cloudflare.com"
@@ -176,12 +178,19 @@ export HOSTNAME=`hostname`
 
 # PROMPT
 # %T time
-if [[ $HOSTNAME = "nom.local" ]]
-	then
-		export PROMPT='%F{blue} %~%b%f $ '
-	else
-		export PROMPT="%F{green} ${HOSTNAME}  %F{blue} %~%b%f > "
-fi
+# if [[ $HOSTNAME = "nom.local" ]]
+# 	then
+# 		export PROMPT='%F{blue} %~%b%f $ '
+# 	else
+# 		export PROMPT="%F{green} ${HOSTNAME}  %F{blue} %~%b%f > "
+# fi
+
+NC='\033[0m'
+BG_PINK='\033[41;37m'
+PINK='\033[0;31m'
+BLACK='\033[0;30m'
+WHITE_HL='\033[47m\033[30m'
+export PROMPT="%F{blue} %~   %F{white}󱞩 %b%f"
 
 # foundry
 export PATH="$PATH:/Users/nom/.foundry/bin"
@@ -232,7 +241,4 @@ bindkey '^[u' cd-up
 # bindkey '^b' fzm
 
 export WASMTIME_HOME="$HOME/.wasmtime"
-
-hello
-
 export PATH="$WASMTIME_HOME/bin:$PATH"
