--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -190,7 +190,8 @@ BG_PINK='\033[41;37m'
 PINK='\033[0;31m'
 BLACK='\033[0;30m'
 WHITE_HL='\033[47m\033[30m'
-export PROMPT="%F{blue} %~   %F{white}󱞩 %b%f"
+export PROMPT="
+%F{blue} %~ %F{white}󱞩 %b%f"
 
 # foundry
 export PATH="$PATH:/Users/nom/.foundry/bin"
