--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -223,6 +223,12 @@ quickls () {
 
 # -s translate input string to output
 
+function clear-reset {
+	clear
+	hello
+	zle && zle reset-prompt
+}; zle -N clear-reset;
+
 function cd-up() {
 	cd ..
 	zle && zle reset-prompt
@@ -230,10 +236,10 @@ function cd-up() {
 
 # KEYBINDINGS
 #
-#bindkey '^l' lfcd; #register widget + key
-bindkey '^ ' joshuto-wrapper;
+bindkey '^ ' lfcd;
+# bindkey '^ ' joshuto-wrapper;
 bindkey '^f' fzf-cd
-#bindkey '^k' quickls
+bindkey '^k' clear-reset
 bindkey '^m' magic-enter
 bindkey '^o' fzf-marks
 bindkey '^y' fzf-insert
