--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -14,10 +14,13 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
-map cmd+n new_os_window_with_cmd
 
-map cmd+shift+t launch --cwd=current
-map cmd+shift+g show_last_command_output
+map cmd+n						new_os_window_with_cmd
+map cmd+t						new_tab_with_cwd
+map cmd+shift+t			new_tab
+map cmd+enter       new_window_with_cwd
+map cmd+shift+g			show_last_command_output
+#map cmd+shift+n launch --cwd=current
 
 # focus kitty
 # map ctrl+space focus_toggle
@@ -1441,7 +1444,6 @@ macos_show_window_title_in none
 #: New window
 
 # map kitty_mod+enter new_window
-# map cmd+enter       new_window
 
 #::  You can open a new window running an arbitrary program, for
 #::  example::
@@ -1575,14 +1577,14 @@ macos_show_window_title_in none
 
 #: New tab
 
-map shift+cmd+t new_tab
-map cmd+t new_tab
+# map shift+cmd+t new_tab
+# map cmd+t new_tab
 # map ctrl+t new_tab
 
 #: Close tab
 
 # map kitty_mod+q close_tab
-# map cmd+w       close_tab
+map cmd+w close_window
 
 #: Close OS window
 
