--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -15,6 +15,16 @@ map cmd+9 goto_tab 9
 map cmd+] next_window
 map cmd+[ previous_window
 
+map alt+j neighboring_window down
+map alt+k neighboring_window up
+map alt+h neighboring_window left
+map alt+l neighboring_window right
+
+# map cmd+j goto_tab_below
+# map cmd+k goto_tab_above
+# map cmd+h goto_tab_left
+# map cmd+l goto_tab_right
+
 map cmd+n						new_os_window_with_cmd
 map cmd+t						new_tab_with_cwd
 map cmd+shift+t			new_tab
