--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -26,8 +26,8 @@ map alt+l neighboring_window right
 # map cmd+l goto_tab_right
 
 map cmd+n						new_os_window_with_cmd
-map cmd+t						new_tab_with_cwd
-map cmd+shift+t			new_tab
+map cmd+t						new_tab
+map cmd+shift+t			new_tab_with_cwd
 map cmd+enter       new_window_with_cwd
 map cmd+shift+g			show_last_command_output
 #map cmd+shift+n launch --cwd=current
