--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -52,6 +52,7 @@ alias o=open
 alias ~=grep
 alias q=exit
 alias lg=lazygit
+alias price="price.py"
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
