--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -3,7 +3,10 @@
 
 export PATH=$PATH:$HOME/.bin:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/:$HOME/go/bin:$HOME/workspaces/python-projects.workspace
 
-hello
+# deno
+export PATH="/Users/nom/.deno/bin:$PATH"
+
+# hello
 
 setopt autocd # cd without typing cd
 autoload -Uz add-zsh-hook
