--- a/helix/config.toml
+++ b/helix/config.toml
@@ -21,6 +21,7 @@ V = ["goto_line_start", "select_mode", "goto_line_end"]
 "}" = ["goto_next_paragraph"]
 Q = ":quit"
 C-f = [":new", ":insert-output lf-pick", ":theme default", "select_all", "split_selection_on_newline", "goto_file", "goto_last_modified_file", ":buffer-close!", ":theme tokyonight_storm"]
+backspace = "goto_last_accessed_file"
 
 [keys.insert]
 C-s = [":write", "normal_mode"]
