--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -253,3 +253,6 @@ bindkey '^[u' cd-up
 
 export WASMTIME_HOME="$HOME/.wasmtime"
 export PATH="$WASMTIME_HOME/bin:$PATH"
+
+# Generated for envman. Do not edit.
+[ -s "$HOME/.config/envman/load.sh" ] && source "$HOME/.config/envman/load.sh"
