--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -98,6 +98,8 @@ alias ytff="yt-dlp --cookies-from-browser=firefox "
 alias htop="btm" # I always forget which monitor I have installed
 alias bottom="btm"
 
+alias iina-shuffle="iina --mpv-shuffle --mpv-loop-playlist"
+
 alias cp-pwd="echo $PWD|pbcopy" # mac only
 
 alias up="cd .."
