--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -97,6 +97,7 @@ alias yt="yt-dlp"
 alias ytff="yt-dlp --cookies-from-browser=firefox "
 alias htop="btm" # I always forget which monitor I have installed
 alias bottom="btm"
+alias ai="openai-prompt.py"
 
 alias iina-shuffle="iina --mpv-shuffle --mpv-loop-playlist"
 
