--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -77,8 +77,9 @@ alias crr="cargo run --release"
 alias ci="cargo install --path ."
 alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
-alias wiki='cd ~/wiki && e ~/wiki/index.md +"lua GoRoot()"'
+alias wiki='cd ~/wiki && e ~/wiki/index.md'
 alias e='nvim'
+alias org='cd ~/org && e index.md'
 # alias e='nvim -c "lua GoRoot()"'
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
