--- a/zsh/zshrc.conf
+++ b/zsh/zshrc.conf
@@ -85,6 +85,7 @@ alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
 alias e-joshuto="cd ~/config/joshuto/ && edit joshuto.toml"
+alias e-zellij="cd ~/config/zellij/ && edit config.kdl"
 alias kitty-joshuto="kitty --override background=#000 --working-directory=$HOME/workspaces --single-instance joshuto"
 alias e-zsh="cd ~/config/zsh/ && edit zshrc.conf"
 alias e-kitty="cd ~/config/kitty/ && edit kitty.conf"
@@ -178,7 +179,6 @@ alias battery='pmset -g batt'
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
-#export TERM="xterm-256color"
 export HOSTNAME=`hostname`
 
 # COMPLETIONS
